src/index/CSS/ReviewsIndex.css
.reviewer-header {
  display: flex;
  justify-content: left;
  align-items: center;
  /* border: 1pt solid rgb(37, 255, 22); */
  border-radius: 8px;
  padding: 8px;
}

.paw-filled {
color: rgb(0, 0, 0);

}
.reviewer-photo {
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
  width: 40px;
  height: 40px;
  border-radius: 8px;
  overflow: hidden;
  border: 1pt solid rgb(34, 19, 150); 
  margin-right: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: context-menu;
  overflow: hidden;
}

.review {
  margin: 0 auto;
  display: flexbox;
  /* border: 1pt solid blue; */
  border-radius: 8px;
  padding: 10px;
  max-width: 100vh;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
  margin-bottom: 20px;
}

.rating {
  display: block;
  gap: 8px;
  border: 1pt solid rgb(255, 49, 173);
}

.reviewer-name {
  display: block;
  text-align: right;
  font-weight: bold; 
  /* border: 1pt solid rgb(134, 4, 255); */
  padding-right: 10px;
  font-style: italic;
}

.reviewer-comment {
  flex: 1;
  border: 1pt solid rgb(0, 0, 0);
  text-align:right;
  padding-right: 20px
}
.admin-comments {
 display: block;
  /* border: 1pt solid blue; */
  
  max-width:50vh;
  margin-left: auto; 
  margin-top: 30px;
}


.admin-header {
  display: flex;
  justify-content: flex-end;
  height:10px;
  background-color: rgb(85, 122, 174);
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
  margin-left:20px;
  margin-right:30px;
  border-radius: 8px;

}



.admin-profile-photo {
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
  width: 40px;
  height: 40px;
  margin-left: 20px;
  margin-top:-10px;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  border: 1px solid rgb(0, 0, 0);
  background-color:white;
  border-radius: 50%;
}

.reply-icon {
  display: block;
  font-size:40px;
  margin-left:10px;
  margin-bottom: -10px;
  
  color:rgba(77, 102, 77, 0.303);
}

.admin-reply {
  position: relative;
  margin-bottom:20px;
  display: flexbox;
  margin-top:30px;
  margin-left: 20px;
  text-align: left;

}

.admin-name {
  display: flexbox;
  text-align: right;
  font-weight: bold; 
  /* border: 1pt solid rgb(4, 255, 109); */
  margin-right: 15px;
  font-style: italic;
}

.initials{
  color:black;
  background-color: rgb(138, 164, 32)
}

